put-online-v1-with-https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://malauryb.github.io/Malaury-web-service-website",
+  "homepage": "https://malauryb.github.io/Malaury-web-service-website",
   "name": "malaury_web_services",
   "version": "0.1.0",
   "private": true,
